--- a/views/jwplayer.html.twig
+++ b/views/jwplayer.html.twig
@@ -16,8 +16,8 @@
 
             jwplayer(playa).setup({
                 autostart: true,
-                    width: 800,
-                    height: 600,
+                    width: "100%",
+                    aspectratio: "16:9",
                     playlist: [
                         {
                             image: '/video/ffb324c2-00db-4d85-aa41-624f8cbc9eb4-480p_mp4_thumbnail.png',
